# neuroPhy

./: .env.example  .gitignore  LICENSE  README.md  params.example.yaml  pyproject.toml
front/src/: app.py  dialogs.py  layout.py  navbar.py
src/neuroPhy/core/: data_structures.py
src/neuroPhy/core/params/: analysis_params.py  base_params.py  plot_params.py
src/neuroPhy/models/: experiment.py
src/neuroPhy/models/params/: analysis_params.py  base_params.py  load_params.py
src/neuroPhy/utils/: __init__.py  load_params.py
